--- a/backend/.env
+++ b/backend/.env
@@ -2,6 +2,7 @@ DATABASE_PORT=5432
 DATABASE_NAME=postgres
 DATABASE_USER=postgres
 DATABASE_PASSWORD=postgres
+DATABASE_HOST=127.0.0.1
 
 PGADMIN_EMAIL=admin@admin.com
 PGADMIN_PASSWORD=qwe123
